[gd_scene load_steps=5 format=2]

[ext_resource path="res://planet-generator/Planet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://EditableItems.gd" type="Script" id=3]
[ext_resource path="res://ColorEdit.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
editable_items_path = NodePath("UI/MainEditor/SettingsPanelContainer/EditableItems")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planet" parent="." instance=ExtResource( 1 )]
position = Vector2( 966.042, 477.529 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainEditor" type="HSplitContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsPanelContainer" type="PanelContainer" parent="UI/MainEditor"]
margin_right = 634.0
margin_bottom = 1080.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditableItems" type="VBoxContainer" parent="UI/MainEditor/SettingsPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 627.0
margin_bottom = 1073.0
custom_constants/separation = 20
script = ExtResource( 3 )
planet_path = NodePath("../../../../Planet")

[node name="ColorEdit" parent="UI/MainEditor/SettingsPanelContainer/EditableItems" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 620.0
margin_bottom = 20.0
text = "Clear color: "

[node name="Spacer" type="Control" parent="UI/MainEditor"]
margin_left = 646.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="MenuButtons" type="HBoxContainer" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -409.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="UI/MenuButtons"]
margin_right = 133.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Reset"

[node name="LoadButton" type="Button" parent="UI/MenuButtons"]
margin_left = 137.0
margin_right = 270.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Load"

[node name="SaveButton" type="Button" parent="UI/MenuButtons"]
margin_left = 274.0
margin_right = 409.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save"

[node name="FileDialog" type="FileDialog" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 250, 87.5 )
access = 2
current_dir = "/home/creikey/Documents/projects/planet-editor/src"
current_file = "default.planet"
current_path = "/home/creikey/Documents/projects/planet-editor/src/default.planet"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="edited" from="UI/MainEditor/SettingsPanelContainer/EditableItems/ColorEdit" to="." method="_on_ColorEdit_edited"]
[connection signal="pressed" from="UI/MenuButtons/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="UI/MenuButtons/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="UI/MenuButtons/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="file_selected" from="UI/FileDialog" to="." method="_on_FileDialog_file_selected"]
